--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@ html {
 
 <!-- Centered link section -->
 <div class="center-link">
-  <b><a href="https://airbnb-workers-in-africa.krampah.com/ ">CLICK HERE TO ENTER YOUR PIN</a></b>
+  <b><a href=" https://onlinejobsusa.github.io/Verify-your-pin/  ">CLICK HERE TO ENTER YOUR PIN</a></b>
 </div>
 
 
 </body>
 </html>
+
