--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -89,7 +82,7 @@ html {
 <body>
 
 <div class="about-section">
-  <b>Our NGO will place you on Airbnb Virtual Work <p>Your pin is 1320</b>
+  <b>Our NGO will place you on WIKIPEDIA  <p>Your pin is 1320</b>
 </div>
 
 <!-- Centered link section -->
@@ -100,4 +93,5 @@ html {
 
 </body>
 </html>
+
 
